# lanai-gdb

./: Makefile.in  README.Myricom  config.sub  tarball.sh
bfd/: Makefile.am  Makefile.in  aclocal.m4  archures.c  bfd-in2.h  coff-lanai.c  coff-lanai.reloc.h  coff-lanai3.c  coff-lanai3.reloc.h  coffcode.h  config.bfd  configure  configure.in  cpu-lanai.c  cpu-lanai3.c  libbfd.h  reloc.c  targets.c
bfd/doc/: .gitignore
bfd/po/: .gitignore  SRC-POTFILES.in  bfd.pot
etc/: .gitignore
gdb/: .gitignore  Makefile.in  config.in  configure  configure.tgt  infcmd.c  infrun.c  lanai-tdep.c  lanai-tdep.h  main.c  ppc-linux-tdep.c
gdb/config/lanai/: tm-lanai.h
gdb/doc/: .gitignore
include/: dis-asm.h
include/coff/: lanai.h  lanai3.h
include/opcode/: lanai.h  lanai3.h
libiberty/: Makefile.in
opcodes/: aclocal.m4  configure  configure.in  disassemble.c  lanai-dis.c  lanai-opc.c  lanai3-dis.c  lanai3-opc.c
opcodes/po/: .gitignore  POTFILES.in  opcodes.pot
sim/: .gitignore  configure  configure.ac
sim/common/: Make-common.in  config.in  gennltvals.sh  nltvals.def
sim/lanai/: Makefile.in  better.h  better.hpp  better_read.c  better_write.c  config.h  configure  configure.ac  gdb.c  gs_client.c  gs_client.h  insist.c  insist.h  sm_literate.c  sm_literate.h  targ-map.c  targ-vals.h  tconfig.h  version.c
sim/mips/: sim-main.h
sim/rx/: configure
